# AxiomOS

./: .env.example  .env.production.example  AGENTS.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION.md  LICENSE  MANDATORY_SERVICES.md  README.md  RENDER_COMMANDS.md  WEB_DEPLOYMENT.md  WEB_SERVICE_SUMMARY.md  chainlit_app.py  fastapi_app.py  main.py  nginx.md  package.json  pyproject.toml  render.yaml  requirements.txt  test_langsmith.py
.chainlit/: config.toml
notes/: ignore_me.md
src/: agent.py  config.py  database.py  models.py  redis_manager.py
src/services/: __init__.py  agent_state.py  chat_message.py  command_types.py  conversation_context_builder.py  llm_service.py  logging_config.py  memory_service.py  models.py  session_service.py
static/: chat.html  index.html  memory.html  old_index.html  old_settings.html  particles.json  particlesjs-config.json  settings.html  test.html
static/css/: style.css
static/js/: app.js  config.js  glassmorphism-utils.js  particles-utils.js
